# openfgdb-platform

./: .gitignore  README.md
.github/workflows/: openfgdb4j-native-matrix.yml
gdal-minimal/: README.md  THIRD_PARTY_NOTICES.md
gdal-minimal/manifests/: SHA256SUMS
gdal-minimal/scripts/: build-all.ps1  build-all.sh  build-gdal.sh  build-proj.sh  build-sqlite.sh  common.sh  fetch-sources.sh  prepare-tree.sh
openfgdb4j/: .gitignore  README.md  build.gradle  settings.gradle
openfgdb4j/docs/: arcgis-pro-smokecheck.md
openfgdb4j/native/: CMakeLists.txt
openfgdb4j/native/include/: openfgdb_c_api.h
openfgdb4j/native/src/: openfgdb_backend.hpp  openfgdb_backend_adapter.cpp  openfgdb_backend_dispatch.cpp  openfgdb_backend_gdal.cpp  openfgdb_c_api.cpp  openfgdb_catalog.cpp  openfgdb_handles.cpp  openfgdb_native_adapter.cpp  openfgdb_native_adapter.hpp  openfgdb_tableio.cpp
openfgdb4j/scripts/: build-java.sh  build-native.sh  generate-bindings.sh  import-gdal-core-minimal.sh  import-gdal-openfilegdb.sh
openfgdb4j/scripts/ci/: build-and-test-unix.sh  build-and-test-windows.ps1  check-linkage-unix.sh  check-linkage-windows.ps1  package-artifact.ps1  package-artifact.sh
openfgdb4j/src/main/java/ch/ehi/openfgdb4j/: NativeLoader.java  OpenFgdb.java  OpenFgdbException.java
openfgdb4j/src/test/java/ch/ehi/openfgdb4j/: NativeLoaderTest.java  OpenFgdbSmokeTest.java
openfgdb4j/src/test/java/ch/ehi/openfgdb4j/ci/: OpenFgdbCiSmokeMain.java
openfgdb4j/test/data/smoke/abbaustellen/data/: ch.so.afu.abbaustellen.relational.xtf
